--- a/Task_02/styles/style.css
+++ b/Task_02/styles/style.css
@@ -41,6 +41,7 @@ header img {
     font-size: 24px;
     border-radius: 6px;
     margin-left: 40px;
+    margin-right: 147px;
 }
 header div span {
     color: #ffffff;
